--- a/contact.html
+++ b/contact.html
@@ -26,39 +26,23 @@ and open the template in the editor.
     </head>
     <body>
         <h1><u>CONTACT US</u></h1>
-         <p style="text-align: left; font-family:cursive; font-size: 30px; color:black;">Registered Address :- G-18 , Malti Towers ,Near Kiran Bungalow ,
-
-Tarabai Park , Kolhapur , 416003 , Maharashtra ,
-
-India
-
- 
-
-Branch Address :-  FF-7, 1'st Floor , North Block, Sacred World Mall
-
-Above Godrej Nature's Basket , Wanowrie 
-
-Pune :- 411040
-
-India
+         <p style="text-align: left; font-family:cursive; font-size: 30px; color:black;">
   
  
 
 Phone Support :
 
-From India : +912066222222
-
-Outside India : 0091-2066222222
+From India : +918123456790
 
  
 
 (Timings 10:00 AM to 10:00 PM IST)
 
 
-Email : order@IndiaCakes.com  ,    orders@indiacakes.co.in
+Email : @bakeryshop.com  , @cakeworld.com
 
 
-For Order Status : If you find Phone number busy please send us an Email with your order no at orders@IndiaCakes.co.in
+For Order Status : If you find Phone number busy please send us an Email with your order no at @cakeworld.com
 
  
 
